2009-07-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Fix the structured IO register access.

2009-06-28  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #26809: Some common math constants missing in math.h
	* include/math.h: Add a set of common math constans.
	* NEWS: Add item to fixed bug list.

2009-06-27  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/misc/eerd_block.S: Add 'eepr_hi' definition to fix the XMEGA
	variant.

2009-06-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Allow the HD44780 connection in stdiodemo to be spread across more
	than a single port.
	* doc/examples/stdiodemo/defines.h: Pin assignments now contain
	both, a port name as well as a pin number.
	* doc/examples/stdiodemo/hd44780.c: Implement the new macros to
	access the port pins.
	* doc/examples/stdiodemo/hd44780.h: Mention the newly added
	function hd44780_powerdown() that prepares the port pins to
	safely power down the HD44780 (externally).
	* doc/examples/stdiodemo/stdiodemo.dox: Adapt to the changes
	implemented.

2009-06-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: replace Linux options to head(1)
	and tail(1) by their Posix counterparts for portability.

2009-06-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Update.

2009-06-06  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: Add __EEPUT() and __EEGET() macroses. (They
	were losted in patch #6718).
	* NEWS: Add items about bugs fixed.

2009-06-06  Dmitry Xmelkov  <dmix@gmail.ru>

	Apply the patch #6718: Optimize the EEPROM functions.
	* devtools/Architecture.am: Add AVRLIB_DEVLIST.
	* devtools/gen-avr-lib-tree.sh: Add a code to replace the <<dev>>
	template into real device names.
	* include/avr/eeprom.h: Rewrite all function definitions. Add a
	set of 'update' functions. Add a set of float arg functions.
	Add a documentation.
	* libc/misc/eerd_block.c: Remove.
	* libc/misc/eerd_dword.c: Remove.
	* libc/misc/eerd_word.c: Remove.