@@ -1,3 +1,9 @@
+2009-07-14  Eric B. Weddington  <eric.weddington@atmel.com>
+
+	Fix for bug #26876.
+	* include/avr/fuse.h: Add check for <avr/io.h>, so fuse.h isn't included
+	directly.
+
 2009-07-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/avr/iom128rfa1.h: Fix the structured IO register access.
